v0.9 - Pending
	+ Added stream support
	+ Use local artwork (cover.jpg, folder.jpg) first, if it exists
	  (requires music_directory to be specified in preferences)
	+ Allow crossfading (mixing) between songs
	+ Fetch higher-resolution cover art
	+ Improved song info viewer
	+ Popup song notification on un-pause
	+ Pick up tooltip album background color from gtk theme
	+ Store cover art in ~/.covers for consistency with gmpc
	+ Bug: Prevent infrequent crash when fetching album art
	+ Bug: Intermittent interface freezes due to threading

v0.8.1 - October 19, 2006
	+ Add Polish translation (Tomasz Dominikowski)
	+ Bug: Correctly send mpd password when using manual connect
	+ Bug: Prevent certain keys from causing events
	+ Bug: Prevent potential crash if not able to obtain mpd status

v0.8 - October 7, 2006
	+ Allow user formatting of current playlist, library, and title
	+ Pref for song notification location
	+ Allow song notification for users without gnome-python-extras
	+ Pref to hide playback buttons
	+ Pref to update MPD library on start
	+ --info, --status displays current song info or MPD status
	+ Pref to autoconnect on start, connect/disconnect buttons
	+ Fetch album art in background (non-blocking)
	+ Correctly retain previous library state when ending search
	+ Add russian translation [Andrew Lukoshko]
	+ Bug: Display path when filename is empty or http/ftp prefixes
	+ Bug: Fix crash if changing connection w/o gnome-python-extras
	+ Bug: Prevent --help, --toggle, etc. from happening twice if
	  dbus is installed
	+ Bug: Some shortcuts don't work with numslock enabled

v0.7.1 - September 27, 2006
	+ Bug: Fix crash if dbus is not installed
	+ Bug: Fix crash if song does not have some id3 info specified

v0.7 - September 27, 2006
	+ Ability to search library by type (can be disabled in prefs)
	+ Optional notification popup on song changes
	+ Show larger image on left-click of cover art
	+ Reduce (pygmy's) default polling time